--- a/css/style.css
+++ b/css/style.css
@@ -73,13 +73,23 @@ body {
     font-size: 16px;
     font-weight: 600;
     color: #1a1a1a;
+    transition: 0.3s ease;
 }
 
-#navbar li a:hover {
+#navbar li a:hover,
+#navbar li a.active {
     color: #088178;
 }
 
-
+#navbar li a.active::after {
+    content: "";
+    width: 30%;
+    height: 2px;
+    background: #088178;
+    position: absolute;
+    bottom: -4px;
+    left: 20px;
+}
 
 
 
