--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ body {
 #navbar li {
     list-style: none;
     padding: 0 20px;
+    position: relative;
 }
 
 #navbar li a {
@@ -81,7 +82,8 @@ body {
     color: #088178;
 }
 
-#navbar li a.active::after {
+#navbar li a.active::after,
+#navbar li a:hover::after {
     content: "";
     width: 30%;
     height: 2px;
