--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,25 @@ body {
     background-color: #fddde4;
 }
 
+#featured .fe-box:nth-child(2) h6{
+    background-color: #cdebbc;
+}
 
+#featured .fe-box:nth-child(3) h6{
+    background-color: #d1e8f2;
+}
+
+#featured .fe-box:nth-child(4) h6{
+    background-color: #cdd4f8;
+}
+
+#featured .fe-box:nth-child(5) h6{
+    background-color: #f6dbf6;
+}
+
+#featured .fe-box:nth-child(6) h6{
+    background-color: #fff2e5;
+}
 
 
 
