--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ h6 {
 p {
     font-size: 16px;
     color: #465b52;
+    margin: 15px 0 20px 0;
 }
 
 .section-p1 {
@@ -121,6 +122,10 @@ body {
 
 #hero h1 {
     color: #088178;
+}
+
+#hero p {
+    margin-bottom: 15px;
 }
 
 #hero button {
@@ -270,15 +275,36 @@ body {
 }
 
 
+/* ======= Banner Section/Seção de banner ======= */
+#banner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    background-image: url(../img/banner/b2.jpg);
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    background-position: center;
+}
+
+#banner h4 {
+    color: #fff;
+    font-size: 16px;
+}
+
+#banner h2 {
+    color: #fff;
+    font-size: 30px;
+    padding: 10px 0;
+}
+
+#banner h2 span {
+    color: #ef3636;
+}
 
 
-
-
-
-
-
-
-/* ======= Shop Section/Seção do Shop ======= */
 /* ======= Single Section/Seção ======= */
 
 
