Products section two

--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,19 @@ p {
     margin: 40px 0;
 }
 
+button.normal {
+    font-size: 14px;
+    font-weight: 600;
+    padding: 15px 30px;
+    color: #000;
+    background-color: #fff;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    transition: 0.2s;
+}
+
 body {
     width: 100%;
 }
@@ -303,6 +316,24 @@ body {
 #banner h2 span {
     color: #ef3636;
 }
+
+#banner button:hover {
+    background: #088178;
+    color: #fff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* ======= Single Section/Seção ======= */
