--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,10 @@ body {
     padding: 30px;
 }
 
+#sm-banner .banner-box2 {
+    background-image: url(../img/banner/b10.jpg);
+}
+
 #sm-banner h4 {
     color: #fff;
     font-size: 20px;
@@ -377,6 +381,44 @@ body {
     background: #088178;
     border: 1px solid #088178;
 }
+
+/*Banner Section 2*/
+#banner3 .banner-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-image: url(../img/banner/b7.jpg);
+    min-width: 30%;
+    height: 30vh;
+    background-size: cover;
+    background-position: center;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+#banner3 h2 {
+    color: #fff;
+    font-weight: 900;
+    font-size: 22px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
