--- a/css/style.css
+++ b/css/style.css
@@ -382,7 +382,14 @@ body {
     border: 1px solid #088178;
 }
 
-/*Banner Section 2*/
+/*Banner Section 3*/
+#banner3 {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 80px;
+}
+
 #banner3 .banner-box {
     display: flex;
     flex-direction: column;
@@ -397,14 +404,32 @@ body {
     margin-bottom: 20px;
 }
 
+#banner3 .banner-box2 {
+    background-image: url("../img/banner/b4.jpg");
+}
+
+#banner3 .banner-box3 {
+    background-image: url("../img/banner/b18.jpg");
+}
+
+
 #banner3 h2 {
     color: #fff;
     font-weight: 900;
     font-size: 22px;
 }
 
+#banner3 h2 {
+    color: #fff;
+    font-weight: 900;
+    font-size: 22px;
+}
 
-
+#banner3 h3 {
+    color: #ec544e;
+    font-weight: 800;
+    font-size: 15px;
+}
 
 
 
