--- a/css/style.css
+++ b/css/style.css
@@ -432,10 +432,22 @@ body {
 }
 
 
+/* ======= Newsletters Section /Seção de boletins informativos ======= */
+#newsletter {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    background-image: url("../img/banner/b14.png");
+    background-repeat: no-repeat;
+    background-position: 20% 30%;
+    background-color: #041e42;
+}
 
 
-
-
+#newsletter h4 {
+    
+}
 
 
 
