--- a/css/style.css
+++ b/css/style.css
@@ -451,15 +451,31 @@ body {
     color: #fff;
 }
 
+#newsletter p {
+    font-size: 14px;
+    font-weight: 600;
+    color: #818ea0;
+}
 
+#newsletter p span {
+    color: #ffbd27;
+}
 
+#newsletter input {
+    height: 3.125rem;
+    padding: 0 1.25rem;
+    font-size: 14px;
+    width: 100%;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    outline: none;
+}
 
-
-
-
-
-
-
+#newsletter button.normal {
+    background-color: #088178;
+    color: #fff;
+    white-space: nowrap;
+}
 
 
 /* ======= Single Section/Seção ======= */
