--- a/css/style.css
+++ b/css/style.css
@@ -461,6 +461,11 @@ body {
     color: #ffbd27;
 }
 
+#newsletter .form {
+    display: flex;
+    width: 40%;
+}
+
 #newsletter input {
     height: 3.125rem;
     padding: 0 1.25rem;
@@ -469,16 +474,20 @@ body {
     border: 1px solid transparent;
     border-radius: 4px;
     outline: none;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
 }
 
 #newsletter button.normal {
     background-color: #088178;
     color: #fff;
     white-space: nowrap;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
 }
 
 
-/* ======= Single Section/Seção ======= */
+/* ======= Footer Section /Seção de Rodapé ======= */
 
 
 
