--- a/css/style.css
+++ b/css/style.css
@@ -631,6 +631,7 @@ footer .copyright p span {
         top: 30px;
         left: 30px;
         color: #222;
+        font-size: 24px;
     }
     
     
